import necessary libraries and load dataset

--- a/DATA  ANALYSIS WITH PANDAS.ipynb
+++ b/DATA  ANALYSIS WITH PANDAS.ipynb
@@ -30,12 +30,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e5e352e7",
+   "metadata": {},
+   "source": [
+    "## Exploratory analysis: Loading and exploring the dataset\n",
+    "\n",
+    "In this section we are going to gain more useful insights of the dataset. The first step is to read the dataset into a dataframe and perform basic analysis to gain more understanding of the dataset we are working on such as what are the maximum and minimum values in the dataset, whether there are NULL values that exist in the dataset,summarizing data using 'groupby' etc"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "069732d1",
+   "execution_count": 1,
+   "id": "f3b0d6b4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#importing necessary libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9f62a419",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "#loading the dataset to a dataframe\n",
+    "data = pd.read_csv('C:/Users/25471/Desktop/DataMining_projects/datamining/adult.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28a4d298",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.head"
+   ]
   }
  ],
  "metadata": {
