generate unique dataset

--- a/DATA  ANALYSIS WITH PANDAS.ipynb
+++ b/DATA  ANALYSIS WITH PANDAS.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72c59cfe",
+   "id": "5ae053f7",
    "metadata": {},
    "source": [
     "## Exploratory analysis: Loading and exploring the dataset\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d391e5af",
+   "id": "3037bbcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a5dcddf9",
+   "id": "2c80b190",
    "metadata": {
     "scrolled": true
    },
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3e7d9c59",
+   "id": "da0c2fb3",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e58110f6",
+   "id": "0fb1bd11",
    "metadata": {},
    "source": [
     "Here data.head() is used to display and examine the first five rows of the dataframe data.\n",
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "250aaef5",
+   "id": "ec86abcc",
    "metadata": {},
    "source": [
     "#### Q1. Use head(2), head(10), tail(2). Explain your observations"
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d3fe7bff",
+   "id": "c3fc0f50",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "187c662a",
+   "id": "e21d2473",
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "08795f0c",
+   "id": "c602be4f",
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83687844",
+   "id": "223fce9e",
    "metadata": {},
    "source": [
     "- Here head(2) displays the first two rows of the dataframe data.\n",
@@ -786,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1067e2bd",
+   "id": "d0de790a",
    "metadata": {},
    "outputs": [
     {
@@ -806,19 +806,68 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d7515d6",
+   "id": "26c698d8",
    "metadata": {},
    "source": [
     "data.shape is used to get the dimensionality of the dataframe data.This returns the number of rows (32561) and columns (15)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d769db1",
+   "metadata": {},
+   "source": [
+    "## Generating a unique dataset \n",
+    "For this task we are going to generate a our version of dataset. To achieve this, we will use 48 in ramdom_state."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2a0da7fc",
+   "execution_count": 11,
+   "id": "39262b13",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = data.sample(n=30000, random_state = 48)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43c2e0fe",
+   "metadata": {},
+   "source": [
+    "The sample() function is used to randomly select rows from a DataFrame.It selects a random sample of 30,000 rows from the dataset. \n",
+    "The random sample will consistently provide the same results when the code is run again with the same seed if a specific value, in this example 48, is specified, hence ensures consistency."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "efe9baa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30000, 15)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e3a7fd8",
+   "metadata": {},
+   "source": [
+    "The dimensionality of the dataset has changed in number of rows to 30000 from 32561 with no changes in number of columns"
+   ]
   }
  ],
  "metadata": {
