--- a/DATA  ANALYSIS WITH PANDAS.ipynb
+++ b/DATA  ANALYSIS WITH PANDAS.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ae053f7",
+   "id": "294edb72",
    "metadata": {},
    "source": [
     "## Exploratory analysis: Loading and exploring the dataset\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3037bbcb",
+   "id": "53e0b8ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2c80b190",
+   "id": "a888b13a",
    "metadata": {
     "scrolled": true
    },
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "da0c2fb3",
+   "id": "811517f9",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fb1bd11",
+   "id": "d53009aa",
    "metadata": {},
    "source": [
     "Here data.head() is used to display and examine the first five rows of the dataframe data.\n",
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec86abcc",
+   "id": "9f5630f0",
    "metadata": {},
    "source": [
     "#### Q1. Use head(2), head(10), tail(2). Explain your observations"
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c3fc0f50",
+   "id": "defa75c4",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e21d2473",
+   "id": "ee700fae",
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c602be4f",
+   "id": "46e2a77d",
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "223fce9e",
+   "id": "799dd7b8",
    "metadata": {},
    "source": [
     "- Here head(2) displays the first two rows of the dataframe data.\n",
@@ -786,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d0de790a",
+   "id": "db42acc4",
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26c698d8",
+   "id": "3f8f4bc4",
    "metadata": {},
    "source": [
     "data.shape is used to get the dimensionality of the dataframe data.This returns the number of rows (32561) and columns (15)"
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d769db1",
+   "id": "a64628b4",
    "metadata": {},
    "source": [
     "## Generating a unique dataset \n",
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "39262b13",
+   "id": "a8288bcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43c2e0fe",
+   "id": "77101223",
    "metadata": {},
    "source": [
     "The sample() function is used to randomly select rows from a DataFrame.It selects a random sample of 30,000 rows from the dataset. \n",
@@ -843,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "efe9baa4",
+   "id": "1cd166d1",
    "metadata": {},
    "outputs": [
     {
@@ -863,11 +863,182 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e3a7fd8",
+   "id": "e7e13f30",
    "metadata": {},
    "source": [
     "The dimensionality of the dataset has changed in number of rows to 30000 from 32561 with no changes in number of columns"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6e564b81",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>fblwgt</th>\n",
+       "      <th>education-num</th>\n",
+       "      <th>capital gain</th>\n",
+       "      <th>capital loss</th>\n",
+       "      <th>hours per week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>30000.000000</td>\n",
+       "      <td>3.000000e+04</td>\n",
+       "      <td>30000.000000</td>\n",
+       "      <td>30000.000000</td>\n",
+       "      <td>30000.000000</td>\n",
+       "      <td>30000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>38.601733</td>\n",
+       "      <td>1.897456e+05</td>\n",
+       "      <td>10.078533</td>\n",
+       "      <td>1072.036100</td>\n",
+       "      <td>86.703967</td>\n",
+       "      <td>40.409433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>13.645910</td>\n",
+       "      <td>1.058005e+05</td>\n",
+       "      <td>2.571715</td>\n",
+       "      <td>7387.730029</td>\n",
+       "      <td>401.942288</td>\n",
+       "      <td>12.349540</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>1.228500e+04</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>1.177670e+05</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>40.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>37.000000</td>\n",
+       "      <td>1.783090e+05</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>40.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>48.000000</td>\n",
+       "      <td>2.368742e+05</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>45.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>1.484705e+06</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>99999.000000</td>\n",
+       "      <td>4356.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                age        fblwgt  education-num  capital gain  capital loss   \n",
+       "count  30000.000000  3.000000e+04   30000.000000  30000.000000  30000.000000  \\\n",
+       "mean      38.601733  1.897456e+05      10.078533   1072.036100     86.703967   \n",
+       "std       13.645910  1.058005e+05       2.571715   7387.730029    401.942288   \n",
+       "min       17.000000  1.228500e+04       1.000000      0.000000      0.000000   \n",
+       "25%       28.000000  1.177670e+05       9.000000      0.000000      0.000000   \n",
+       "50%       37.000000  1.783090e+05      10.000000      0.000000      0.000000   \n",
+       "75%       48.000000  2.368742e+05      12.000000      0.000000      0.000000   \n",
+       "max       90.000000  1.484705e+06      16.000000  99999.000000   4356.000000   \n",
+       "\n",
+       "       hours per week  \n",
+       "count    30000.000000  \n",
+       "mean        40.409433  \n",
+       "std         12.349540  \n",
+       "min          1.000000  \n",
+       "25%         40.000000  \n",
+       "50%         40.000000  \n",
+       "75%         45.000000  \n",
+       "max         99.000000  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7feafb8",
+   "metadata": {},
+   "source": [
+    "This method displays a summary of several statistical indicators for each numerical column, including count, mean, standard deviation, minimum value, quartiles, and maximum value.\n",
+    "\n",
+    "- count: Shows how many non-missing values there are in each column. In this instance, all columns have 30,000 non-missing data.\n",
+    "\n",
+    "- mean: Displays each column's average or mean value. For instance, the typical age is about 38.60 and so on.\n",
+    "\n",
+    "- std: stands for the standard deviation, which quantifies how much results deviate from the mean. More variety in the data is indicated by a higher standard deviation.\n",
+    "\n",
+    "- min: gives the minimum value that was noticed in each column, or min. For instance,the minimum age is 17.\n",
+    "\n",
+    "- 25%, 50%, and 75%: These are quartiles,25% of the data falls is known as the 25th percentile (first quartile). Similar to this, the median is represented by the 50th percentile (second quartile), and the number below which 75% of the data falls by the 75th percentile (third quartile).\n",
+    "\n",
+    "- max: Displays the highest value ever recorded for each column. For instance, the maximum age is 90.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "440bc523",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
