check for unique occurences in education

--- a/DATA  ANALYSIS WITH PANDAS.ipynb
+++ b/DATA  ANALYSIS WITH PANDAS.ipynb
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7feafb8",
+   "id": "1356427f",
    "metadata": {},
    "source": [
     "This method displays a summary of several statistical indicators for each numerical column, including count, mean, standard deviation, minimum value, quartiles, and maximum value.\n",
@@ -1034,8 +1034,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "4897941b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "education-num\n",
+       "9     9678\n",
+       "10    6724\n",
+       "13    4907\n",
+       "14    1600\n",
+       "11    1271\n",
+       "7     1091\n",
+       "12     985\n",
+       "6      869\n",
+       "4      589\n",
+       "15     526\n",
+       "5      471\n",
+       "8      401\n",
+       "16     381\n",
+       "3      301\n",
+       "2      157\n",
+       "1       49\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['education-num'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "274d4fc5",
+   "metadata": {},
+   "source": [
+    "This returns the occurence of unique values in the 'education-num' column of integer type.Each value in the 'education-num' column represents a different level of education or educational attainment for example 9 occurs 9678 times and so on."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a4ff12ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "education\n",
+       " HS-grad         9678\n",
+       " Some-college    6724\n",
+       " Bachelors       4907\n",
+       " Masters         1600\n",
+       " Assoc-voc       1271\n",
+       " 11th            1091\n",
+       " Assoc-acdm       985\n",
+       " 10th             869\n",
+       " 7th-8th          589\n",
+       " Prof-school      526\n",
+       " 9th              471\n",
+       " 12th             401\n",
+       " Doctorate        381\n",
+       " 5th-6th          301\n",
+       " 1st-4th          157\n",
+       " Preschool         49\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['education'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d812f5c",
+   "metadata": {},
+   "source": [
+    "This returns the occurence of each value in the level of education in the 'education' column. For example HS-grad has 9678 graduates and so on."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "440bc523",
+   "id": "85de9907",
    "metadata": {},
    "outputs": [],
    "source": []
