--- a/DATA  ANALYSIS WITH PANDAS.ipynb
+++ b/DATA  ANALYSIS WITH PANDAS.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a888b13a",
    "metadata": {
     "scrolled": true
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "811517f9",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        "4             0             0              40            Cuba       <=50K  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "defa75c4",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
        "1             0             0              13   United-States       <=50K  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ee700fae",
    "metadata": {},
    "outputs": [
@@ -656,7 +656,7 @@
        "9        >50K  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "46e2a77d",
    "metadata": {},
    "outputs": [
@@ -764,7 +764,7 @@
        "32560         15024             0              40   United-States        >50K  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "db42acc4",
    "metadata": {},
    "outputs": [
@@ -795,7 +795,7 @@
        "(32561, 15)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,12 +818,12 @@
    "metadata": {},
    "source": [
     "## Generating a unique dataset \n",
-    "For this task we are going to generate a our version of dataset. To achieve this, we will use 48 in ramdom_state."
+    "For this task we are going to generate a our version of dataset. To achieve this, we will use 48 in random_state."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "a8288bcb",
    "metadata": {},
    "outputs": [],
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "1cd166d1",
    "metadata": {},
    "outputs": [
@@ -852,7 +852,7 @@
        "(30000, 15)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,12 +866,12 @@
    "id": "e7e13f30",
    "metadata": {},
    "source": [
-    "The dimensionality of the dataset has changed in number of rows to 30000 from 32561 with no changes in number of columns"
+    "The dimensionality of the dataset has changed in number of rows from 32561 to 30000 with no changes in number of columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "6e564b81",
    "metadata": {},
    "outputs": [
@@ -1003,7 +1003,7 @@
        "max         99.000000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "1a87b274",
    "metadata": {},
    "outputs": [
@@ -1061,7 +1061,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "baf58601",
    "metadata": {},
    "outputs": [
@@ -1107,7 +1107,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
