get statistical summary for all numeric and non-numeric columns

--- a/DATA  ANALYSIS WITH PANDAS.ipynb
+++ b/DATA  ANALYSIS WITH PANDAS.ipynb
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc8c7f30",
+   "id": "c56a75e8",
    "metadata": {},
    "source": [
     "The cell above removes/drops the column with the label \"fblwgt\" by specifying the axis=1 for columns and axis=0 for rows.\n",
@@ -1146,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8585cd7a",
+   "id": "7b2026a0",
    "metadata": {},
    "outputs": [
     {
@@ -1166,16 +1166,321 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0967b240",
+   "id": "ad38b77c",
    "metadata": {},
    "source": [
-    "Change in the number of columns from 15 to 14"
+    "Change in the number of columns from 15 to 14 with no changes in rows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "fbf70212",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>workclass</th>\n",
+       "      <th>education</th>\n",
+       "      <th>education-num</th>\n",
+       "      <th>marital status</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>relationship</th>\n",
+       "      <th>race</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>capital gain</th>\n",
+       "      <th>capital loss</th>\n",
+       "      <th>hours per week</th>\n",
+       "      <th>native country</th>\n",
+       "      <th>class label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>30000.000000</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>30000.000000</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>30000.000000</td>\n",
+       "      <td>30000.000000</td>\n",
+       "      <td>30000.000000</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>30000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9</td>\n",
+       "      <td>16</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7</td>\n",
+       "      <td>15</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>42</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Prof-specialty</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20897</td>\n",
+       "      <td>9678</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13807</td>\n",
+       "      <td>3834</td>\n",
+       "      <td>12170</td>\n",
+       "      <td>25608</td>\n",
+       "      <td>20079</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>26872</td>\n",
+       "      <td>22779</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>38.601733</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.078533</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1072.036100</td>\n",
+       "      <td>86.703967</td>\n",
+       "      <td>40.409433</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>13.645910</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.571715</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7387.730029</td>\n",
+       "      <td>401.942288</td>\n",
+       "      <td>12.349540</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>37.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>48.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>99999.000000</td>\n",
+       "      <td>4356.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 age workclass education  education-num       marital status   \n",
+       "count   30000.000000     30000     30000   30000.000000                30000  \\\n",
+       "unique           NaN         9        16            NaN                    7   \n",
+       "top              NaN   Private   HS-grad            NaN   Married-civ-spouse   \n",
+       "freq             NaN     20897      9678            NaN                13807   \n",
+       "mean       38.601733       NaN       NaN      10.078533                  NaN   \n",
+       "std        13.645910       NaN       NaN       2.571715                  NaN   \n",
+       "min        17.000000       NaN       NaN       1.000000                  NaN   \n",
+       "25%        28.000000       NaN       NaN       9.000000                  NaN   \n",
+       "50%        37.000000       NaN       NaN      10.000000                  NaN   \n",
+       "75%        48.000000       NaN       NaN      12.000000                  NaN   \n",
+       "max        90.000000       NaN       NaN      16.000000                  NaN   \n",
+       "\n",
+       "             occupation relationship    race    sex  capital gain   \n",
+       "count             30000        30000   30000  30000  30000.000000  \\\n",
+       "unique               15            6       5      2           NaN   \n",
+       "top      Prof-specialty      Husband   White   Male           NaN   \n",
+       "freq               3834        12170   25608  20079           NaN   \n",
+       "mean                NaN          NaN     NaN    NaN   1072.036100   \n",
+       "std                 NaN          NaN     NaN    NaN   7387.730029   \n",
+       "min                 NaN          NaN     NaN    NaN      0.000000   \n",
+       "25%                 NaN          NaN     NaN    NaN      0.000000   \n",
+       "50%                 NaN          NaN     NaN    NaN      0.000000   \n",
+       "75%                 NaN          NaN     NaN    NaN      0.000000   \n",
+       "max                 NaN          NaN     NaN    NaN  99999.000000   \n",
+       "\n",
+       "        capital loss  hours per week  native country class label  \n",
+       "count   30000.000000    30000.000000           30000       30000  \n",
+       "unique           NaN             NaN              42           2  \n",
+       "top              NaN             NaN   United-States       <=50K  \n",
+       "freq             NaN             NaN           26872       22779  \n",
+       "mean       86.703967       40.409433             NaN         NaN  \n",
+       "std       401.942288       12.349540             NaN         NaN  \n",
+       "min         0.000000        1.000000             NaN         NaN  \n",
+       "25%         0.000000       40.000000             NaN         NaN  \n",
+       "50%         0.000000       40.000000             NaN         NaN  \n",
+       "75%         0.000000       45.000000             NaN         NaN  \n",
+       "max      4356.000000       99.000000             NaN         NaN  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.describe(include='all')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "130ead30",
+   "metadata": {},
+   "source": [
+    "the cell above displays the statistical summary of both the numeric and non-numeric columns and it also provides information on the unique values and their frequencies for categorical columns.\n",
+    "\n",
+    "- count: Indicates the number of non-missing values for each column. For example, the 'age' column has 30,000 non-missing values.\n",
+    "- unique: Shows the number of unique values in each column. The 'workclass' column has 9 unique values, 'education' has 16 unique values, and so on.\n",
+    "- top: Displays the most frequent value in each column. For instance, in the 'workclass' column, 'Private' is the most common value.\n",
+    "- freq: Corresponds to the frequency of the most frequent value in each column. In the 'workclass' column, 'Private' appears 20,897 times.\n",
+    "- mean: Represents the mean value for numeric columns. In the 'age' column, the average age is approximately 38.60.\n",
+    "- std: Represents the standard deviation for numeric columns. The 'age' column has a standard deviation of approximately 13.65.\n",
+    "- min: Indicates the minimum value for numeric columns. The minimum age is 17.\n",
+    "- 25%, 50%, 75%: These quartiles represent the values below which a certain percentage of the data falls. For example, 25% of the ages are below 28, while 50% are below 37.\n",
+    "- max: Represents the maximum value for numeric columns. The maximum age is 90."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2210699c",
+   "id": "8cd380d4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1183,23 +1488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7eea0a1e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0409add3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7631c649",
+   "id": "d90ee2c8",
    "metadata": {},
    "outputs": [],
    "source": []
