exploring unique values on education and age column

--- a/DATA  ANALYSIS WITH PANDAS.ipynb
+++ b/DATA  ANALYSIS WITH PANDAS.ipynb
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c56a75e8",
+   "id": "f113c775",
    "metadata": {},
    "source": [
     "The cell above removes/drops the column with the label \"fblwgt\" by specifying the axis=1 for columns and axis=0 for rows.\n",
@@ -1146,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7b2026a0",
+   "id": "5c798e1d",
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad38b77c",
+   "id": "7f485b39",
    "metadata": {},
    "source": [
     "Change in the number of columns from 15 to 14 with no changes in rows."
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "fbf70212",
+   "id": "c4e2ce94",
    "metadata": {
     "scrolled": true
    },
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "130ead30",
+   "id": "c6892322",
    "metadata": {},
    "source": [
     "the cell above displays the statistical summary of both the numeric and non-numeric columns and it also provides information on the unique values and their frequencies for categorical columns.\n",
@@ -1479,19 +1479,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8cd380d4",
+   "execution_count": 17,
+   "id": "463b6241",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "education\n",
+       " HS-grad         9678\n",
+       " Some-college    6724\n",
+       " Bachelors       4907\n",
+       " Masters         1600\n",
+       " Assoc-voc       1271\n",
+       " 11th            1091\n",
+       " Assoc-acdm       985\n",
+       " 10th             869\n",
+       " 7th-8th          589\n",
+       " Prof-school      526\n",
+       " 9th              471\n",
+       " 12th             401\n",
+       " Doctorate        381\n",
+       " 5th-6th          301\n",
+       " 1st-4th          157\n",
+       " Preschool         49\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['education'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7094a0d",
+   "metadata": {},
+   "source": [
+    "value_counts() produces a frequency table, which shows occurance of each feature or attribute in a dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5d88cbe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['education'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "672cdd59",
+   "metadata": {},
+   "source": [
+    "the code calculates the number of unique values in the 'education' column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0de036a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age\n",
+       "36    832\n",
+       "34    830\n",
+       "31    815\n",
+       "35    809\n",
+       "33    808\n",
+       "     ... \n",
+       "83      6\n",
+       "85      3\n",
+       "88      2\n",
+       "87      1\n",
+       "86      1\n",
+       "Name: count, Length: 73, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['age'].value_counts()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d90ee2c8",
+   "id": "f870e64d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "The code returns the frequency table for age that appears to be too lengthy to be analysed and the frequency of each value is displayed."
+   ]
   }
  ],
  "metadata": {
