get value counts for sex and working class

--- a/DATA  ANALYSIS WITH PANDAS.ipynb
+++ b/DATA  ANALYSIS WITH PANDAS.ipynb
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e014dec",
+   "id": "2853045c",
    "metadata": {},
    "source": [
     "The cell above removes/drops the column with the label \"fblwgt\" by specifying the axis=1 for columns and axis=0 for rows.\n",
@@ -1146,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "595e3385",
+   "id": "8b040b2c",
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a39961f0",
+   "id": "f0a805a9",
    "metadata": {},
    "source": [
     "Change in the number of columns from 15 to 14 with no changes in rows."
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "35855c79",
+   "id": "c192f40e",
    "metadata": {
     "scrolled": true
    },
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "697b4e2c",
+   "id": "b07a0e93",
    "metadata": {},
    "source": [
     "the cell above displays the statistical summary of both the numeric and non-numeric columns and it also provides information on the unique values and their frequencies for categorical columns.\n",
@@ -1480,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "64021099",
+   "id": "055387a7",
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3f0a647",
+   "id": "bfaf83aa",
    "metadata": {},
    "source": [
     "value_counts() produces a frequency table, which shows occurance of each feature or attribute in a dataset."
@@ -1526,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f6a9737c",
+   "id": "351d620d",
    "metadata": {},
    "outputs": [
     {
@@ -1547,7 +1547,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "6e5cf84a",
+   "id": "7e4338df",
    "metadata": {},
    "source": [
     "the code calculates the number of unique values in the 'education' column.\n",
@@ -1557,7 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a9571e86",
+   "id": "bf3fd565",
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f647d869",
+   "id": "f0e51f4e",
    "metadata": {},
    "source": [
     "The code returns the frequency table for age that appears to be too lengthy to be analysed and the frequency of each value is displayed.For this we can use graphs to make more observations."
@@ -1598,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6b20fd39",
+   "id": "bbbefe61",
    "metadata": {
     "scrolled": true
    },
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c86d0aa5",
+   "id": "014ff5f4",
    "metadata": {},
    "source": [
     "This will display the age distribution of the dataset.The middle 50% of ages will be represented by the big box, median ages will be represented by the middle line inside the box and the range of ages that are not outliers will be represented by the whiskers.In this case the median age is at the interval of 38-39 years and the outlier variable is between 80-90 years"
@@ -1639,7 +1639,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "72a31cce",
+   "id": "f37d7533",
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1670,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "56f7b4be",
+   "id": "d212bff3",
    "metadata": {},
    "outputs": [
     {
@@ -1700,7 +1700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b69171f1",
+   "id": "8c9e35cc",
    "metadata": {},
    "source": [
     "Both the commands generate a histogram of the age variable to show the age distribution by dividing into 100 equal intervals by using bins=100.The graph shows to be trailing on one side meaning that the variable is skewed.The ages with the highest frequency is on the interval of 30-38 years, this show the central tendency.Outliers for this case are ages between 80-90 years"
@@ -1708,8 +1708,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "ceb8e58f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sex\n",
+       " Male      20079\n",
+       " Female     9921\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['sex'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c99ab5f8",
+   "metadata": {},
+   "source": [
+    "There are only two unique values in \"sex\" column.In this case there are 20079 males and 9921 females in the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c34ce747",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['age', 'workclass', 'education', 'education-num', 'marital status',\n",
+       "       'occupation', 'relationship', 'race', 'sex', 'capital gain',\n",
+       "       'capital loss', 'hours per week', 'native country', 'class label'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b242fdee",
+   "metadata": {},
+   "source": [
+    "returns a list of all column names present in the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3f62d1fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "workclass\n",
+       " Private             20897\n",
+       " Self-emp-not-inc     2339\n",
+       " Local-gov            1931\n",
+       " ?                    1693\n",
+       " State-gov            1204\n",
+       " Self-emp-inc         1031\n",
+       " Federal-gov           885\n",
+       " Without-pay            13\n",
+       " Never-worked            7\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['workclass'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "344d4b56",
+   "metadata": {},
+   "source": [
+    "The command returns a series of the types of working class and the occurence of each count in that proffession.The display above has been grouped in descending order. In this case 'private' has higher number than those who never worked."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d8838a6c",
+   "id": "eae4382a",
    "metadata": {},
    "outputs": [],
    "source": []
